# fiji-gen

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  benchmark_results.jsonl  benchmark_rlga.py  inspect_data.py  jump_params.json  jump_rl_params.json  params_ga.txt  params_rlga.txt  params_rlga_par.txt  plot_benchmark.py  pyproject.toml
data/: genome100_jump2_pop10000.jsonl  genome100_jump2_pop40000.jsonl  genome100_jump4_pop10000.jsonl  genome100_jump4_pop40000.jsonl  genome50_jump2_pop10000.jsonl  genome50_jump2_pop20000.jsonl  genome50_jump2_pop40000.jsonl  genome50_jump4_pop10000.jsonl  genome50_jump4_pop20000.jsonl  genome50_jump4_pop40000.jsonl
data/state-2/: genome100_jump2_pop20000.jsonl  genome100_jump2_pop40000.jsonl  genome100_jump4_pop20000.jsonl  genome50_jump2_pop40000.jsonl  genome50_jump4_pop40000.jsonl
data/state-4/: genome100_jump2_pop10000.jsonl  genome100_jump2_pop20000.jsonl  genome100_jump2_pop40000.jsonl  genome100_jump4_pop10000.jsonl  genome100_jump4_pop20000.jsonl  genome100_jump4_pop40000.jsonl  genome50_jump2_pop10000.jsonl  genome50_jump2_pop20000.jsonl  genome50_jump2_pop40000.jsonl  genome50_jump4_pop10000.jsonl  genome50_jump4_pop20000.jsonl  genome50_jump4_pop40000.jsonl
include/: dummy_ga.hpp  ga.hpp  main.cpp  par_ga.hpp  par_rl_ga.hpp  rl_ga.hpp  royal_road_ga.cpp  test  test.cpp  test_ga  test_ga.cpp
scripts/: benchmark_jump.py  plot_jump_benchmark.py
src/: deceptive_royal_road_problem.cpp  deceptive_royal_road_problem_rl.cpp  env.py  flow_shop_problem.cpp  flow_shop_problem_rl.cpp  ga.py  jump_problem.cpp  jump_problem_rl.cpp  qlearning.py  royal_road_problem.cpp  royal_road_problem_rl.cpp  train.py  utils.py  xor_nn.cpp
